(library
 (name brane)
 (inline_tests)
 (modules brane examples)
 (libraries core patdiff)
 (preprocess
  (pps ppx_deriving.eq ppx_compare ppx_let ppx_expect ppx_sexp_conv)))

(executable
 (name main)
 (modules main)
 (libraries core brane)
 (preprocess
  (pps ppx_deriving.eq ppx_compare ppx_let ppx_expect ppx_sexp_conv)))

(executable
 (name main2)
 (modules main2)
 (libraries core brane)
 (preprocess
  (pps ppx_deriving.eq ppx_compare ppx_let ppx_expect ppx_sexp_conv)))
